# Oh-Ben-Claw

./: .gitattributes  .gitignore  AI-Agents-Innovations-June2026.md  AI-Agents-Research-July2026.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  mesh_status.json
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-guide.yml
Knowledge Base/: PR-hardware-scout-2026-06-29.md  hardware-scout-2026-06-29.md  hardware-scout-2026-07-06.md
dashboards/: mesh-dashboard.html
docs/: ACCELERAPP-CROSS-POLLINATION.md  AGENT-MEMORY-INTEGRITY.md  BENCH-BINDER.md  BENCH-PINOUT-CARDS.md  BENCH-TEST-HARDWARE.md  BENCH-WALKTHROUGH-ADVANCED.md  BENCH-WALKTHROUGH.md  CONSERVATION-GRID-STRATEGY.md  ECOSYSTEM-INTEGRATION.md  EMBODIED-ARCHITECTURE.md  EMBODIED-RESEARCH-INTEGRATION.md  HARDWARE-TEST-WALKTHROUGH.md  PHASE-B-LORA-MESH.md  PHASE16-PLAN.md  PHASE17-PLAN.md  SAFETY-CASE.md  SOTA-COMPARISON.md  SUBSYSTEM-SUITE-CONTRACT.md  SUBSYSTEM-SUITES-STATUS.md  SUBSYSTEM-SUITES.md  T-DECK-RESEARCH.md  V2-HARDWARE-ECOSYSTEM.md  V2-IMPLEMENTATION.md  V2-STRATEGY.md
docs/architecture/: ARCHITECTURE.md
docs/datasheets/: nanopi-neo3.md  phase5-hardware-ecosystem.md  waveshare-esp32-s3-touch-lcd-2.1.md
docs/playbooks/: mesh-node-lost.md  safing-escalations.md  vision-analytics.md
examples/: config-cutting-edge.toml  config-multi-device.toml  config-nanopi-deployment.toml
firmware-templates/: templates.json
firmware/heltec-lora-linktest/: Cargo.toml  rust-toolchain.toml  sdkconfig.defaults
firmware/heltec-lora-linktest/.cargo/: config.toml
firmware/heltec-lora-linktest/src/: main.rs  spine.rs  sx1262.rs
firmware/lora-node/: README.md
firmware/lora-node/obc_lora_bridge/: obc_lora_bridge.ino
firmware/obc-esp32-s3/: .gitignore  BRINGUP.md  CAMERA.md  Cargo.toml  idf_component.yml  rust-toolchain.toml  sdkconfig.defaults
firmware/obc-esp32-s3/.cargo/: config.toml
firmware/obc-esp32-s3/src/: audio.rs  camera.rs  camera_bindings.h  dht.rs  main.rs  reflex.rs  safety.rs  safing.rs  sensors.rs
firmware/t-deck-terminal/: README.md
firmware/t-deck-terminal/t_deck_terminal/: t_deck_terminal.ino
gui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
gui/src/components/: ChatPanel.tsx  NodesPanel.tsx  SettingsPanel.tsx  ToolLogPanel.tsx  VaultPanel.tsx
gui/src/hooks/: useTauri.ts
gui/src/stores/: appStore.ts
gui/src/styles/: globals.css
gui/src/types/: index.ts
guide/: index.html
guide-generator/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
guide-generator/src/: App.tsx  index.css
guide-generator/src/components/: CodeBlock.tsx  GuideView.tsx  RoleAssignmentStep.tsx  Wizard.tsx
guide-generator/src/data/: hardware.ts
guide/assets/: html2canvas-Bt7muGdX.js  html2canvas-DPnVP3SE.js  index-C34Up2sV.js  index-CFd7oZlb.css  index-CUUGV4pc.css  index-Cdm2etup.js  index.es-C2dKDWdL.js  index.es-qXRf70iD.js  jspdf.es.min-SytEE-nm.js  jspdf.es.min-djYSTxEH.js
planner-wasm/: Cargo.toml
planner-wasm/src/: lib.rs
registry/: README.md  registry.json
scripts/: serial-json-repl.ps1
src/: lib.rs  main.rs  multimodal.rs
src/a2a/: mod.rs
src/aerial/: mod.rs
src/agent/: delegation_tools.rs  edge.rs  handle.rs  judge.rs  mod.rs  notify.rs  orchestrator.rs  pool.rs  reflex.rs  reflexion.rs  safing.rs  streaming.rs  system2.rs
src/approval/: mod.rs
src/audio/: mod.rs  suite.rs
src/bus/: mod.rs
src/channels/: cli.rs  discord.rs  feishu.rs  imessage.rs  irc.rs  matrix.rs  mattermost.rs  mod.rs  signal.rs  slack.rs  telegram.rs  typing.rs  utils.rs  whatsapp.rs
src/comms/: mod.rs
src/config/: mod.rs
src/cost/: mod.rs  tracker.rs  types.rs
src/dashboard/: mod.rs
src/deployment/: advisor.rs  firmware_scaffold.rs  inventory.rs  mod.rs  planner.rs  saga.rs  scheme.rs  swarm.rs
src/doctor/: mod.rs
src/fleet/: mod.rs
src/foresight/: mod.rs
src/gateway/: middleware.rs  mod.rs  pwa.rs  routes.rs  ws.rs
src/geo/: anchor.rs  mod.rs
src/gnss/: mod.rs
src/harness/: mod.rs
src/hooks/: mod.rs  runner.rs  traits.rs
src/learning/: mod.rs
src/mcp/: client.rs  mod.rs  server.rs
src/memory/: embed.rs  heartbeat.rs  image.rs  journal.rs  mod.rs  personality.rs  trajectory.rs  vector.rs  world.rs
src/mission/: bt.rs  mod.rs
src/movement/: feedback.rs  mod.rs
src/navigation/: costmap.rs  exploration.rs  mapping.rs  mod.rs  particle.rs  planning.rs  pose_fusion.rs  sensor_model.rs  slam.rs
src/observability/: mod.rs
src/peripherals/: arduino.rs  bus_tools.rs  fusion.rs  mod.rs  nanopi.rs  onboarding.rs  registry.rs  rpi.rs  selftest.rs  sensors.rs  stm32.rs  traits.rs
src/power/: mod.rs
src/providers/: anthropic.rs  compatible.rs  failover.rs  mod.rs  model_registry.rs  ollama.rs  openai.rs  openrouter.rs  retry.rs  streaming.rs
src/rag/: mod.rs
src/runtime/: docker.rs  mod.rs  native.rs  traits.rs  wasm.rs
src/satcom/: mod.rs
src/scheduler/: mod.rs
src/security/: audit.rs  audit_sign.rs  limits.rs  mod.rs  pairing.rs  policy.rs  redteam.rs  taint.rs  trust.rs  vault.rs
src/sensing/: mod.rs
src/siteplan/: mod.rs
src/skill_forge/: evolve.rs  improve.rs  install_policy.rs  mod.rs  registry.rs  rollout.rs  synthesis.rs
src/spine/: lora_gateway.rs  lora_mesh.rs  mesh_supervisor.rs  mod.rs  p2p.rs
src/tools/: mod.rs  traits.rs
src/tunnel/: cloudflare.rs  mod.rs  tailscale.rs
src/vision/: clawcam_actuate.rs  clawcam_analytics.rs  clawcam_ingest.rs  clawcam_rules.rs  clawcam_spatial.rs  mod.rs
tests/: embodied_full_stack.rs  embodied_hil_loop.rs  embodied_safing_loop.rs  evals.rs  firmware_spine_framing.rs  harness_long_horizon.rs  mesh_fleet_e2e.rs  mesh_spine_e2e.rs  offgrid_fleet_loop.rs  planner_parity.rs  spine_fleet_e2e.rs  system2_eval.rs
(+36 files in other folders)
